--- a/Views/Temperatures.html
+++ b/Views/Temperatures.html
@@ -2,6 +2,23 @@
 
 <div class="row">
     <div class="col-md-12">
+        <div class="row">
+            <br />
+            <div class="col-md-12">
+                <button type="button"
+                        class="btn btn-primary"
+                        data-toggle="modal"
+                        data-target="#newTemperatureModal">
+                    <span class="glyphicon glyphicon-plus"></span> New temperature
+                </button>
+            </div>
+        </div>
+        <hr />
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-12">
         <table class="table">
             <tr>
                 <th>Id</th>
@@ -26,3 +43,5 @@
         </table>
     </div>
 </div>
+
+<div ng-include="'Views/Partials/NewTemperatureModal.html'"></div>
