--- a/Views/Home.html
+++ b/Views/Home.html
@@ -1,1 +1,27 @@
-﻿<h1 ng-bind="title"></h1>
+﻿<div class="col-sm-12">
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="col-sm-4">
+                <a href="/Sensors/Alarm">
+                    <img class="picturesize" src="../images/alarm.jpg" />
+                </a>
+            </div>
+            <div class="col-sm-4">
+                <a href="/Sensors/Lights">
+                    <img class="picturesize" src="../images/Lights.jpg" />
+                </a>
+            </div>
+            <div class="col-sm-4">
+                <a href="/Sensors/Lights">
+                    <img class="picturesize" src="../images/temperature.jpg" />
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+
+<style>
+    .picturesize {
+        max-width: 320px;
+    }
+</style>
