--- a/Views/Home.html
+++ b/Views/Home.html
@@ -1,26 +1,34 @@
-﻿<h1 ng-bind="title"></h1>
-<div ng-repeat="temperature in temperatures track by $index">
-    <h2 ng-bind="temperature.Name"></h2>
-</div>
-
-<center><h1 ng-bind="title"></h1></center>
-
-<div class="col-sm-12">
+﻿<div class="col-sm-12">
     <div class="row">
         <div class="col-sm-5 col-sm-offset-1">
-            <img src="../images/Lights.jpg" style="max-width: 89%;" />
+            <a href="Sensors/Lights">
+                <img class="picture" src="../images/Lights.jpg" style="max-width: 89%;" />
+            </a>
         </div>
         <div class="col-sm-5 col-sm-offset-1">
-            <img src="../images/temperature.jpg" style="max-width: 89%;" />
+            <a href="Sensors/Temperatures">
+                <img class="picture" src="../images/temperature.jpg" style="max-width: 89%;" />
+            </a>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-12" style="margin-top: 30px;">
             <div class="row">
                 <div class="col-sm-5 col-sm-offset-1">
-                    <img src="../images/alarm.jpg" style="max-width: 89%;" />
+                    <a href="Sensors/Alarm">
+                        <img class="picture" src="../images/alarm.jpg" style="max-width: 89%;" />
+                    </a>
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<style>
+    .picture {
+        opacity: 0.5;
+    }
+    .picture:hover {
+        opacity: 1.0;
+    }
+</style>
