--- a/Views/Partials/EditTemperatureModal.html
+++ b/Views/Partials/EditTemperatureModal.html
@@ -1,4 +1,4 @@
-﻿<div id="newLightModal" class="modal fade" role="dialog">
+﻿<div id="editTemperatureModal" class="modal fade" role="dialog">
     <div class="modal-dialog">
 
         <!-- Modal content -->
@@ -7,24 +7,20 @@
                 <button type="button" class="close" data-dismiss="modal">
                     &times;
                 </button>
-                <h4 class="modal-title">Add light</h4>
+                <h4 class="modal-title">Edit temperature</h4>
             </div>
             <div class="modal-body">
-                <form ng-submit="addLight()">
+                <form ng-submit="editTemperature(temperature)">
                     <div class="form-group">
-                        <label for="light-name">Light name:</label>
+                        <label for="temperature-name">Temperature name:</label>
                         <input type="text"
                                class="form-control"
-                               ng-model="newLight.Name"
-                               placeholder="Light name..." />
-                    </div>
-                    <div class="form-group">
-                        <label for="light-status">Light status:</label>
-                        <input type="checkbox" ng-model="newLight.Status" />
+                               ng-model="editTemperature.Name"
+                               placeholder="Temperature name..." />
                     </div>
 
                     <button type="submit" class="btn btn-primary">
-                        Add light
+                        Done
                     </button>
                 </form>
             </div>
