--- a/Views/Partials/NewAlarmModal.html
+++ b/Views/Partials/NewAlarmModal.html
@@ -20,10 +20,7 @@
                     </div>
                     <div class="form-group">
                         <label for="alarm-status">Alarm status:</label>
-                        <input type="checkbox"
-                               class="form-control"
-                               ng-model="newAlarm.Status"
-                               placeholder="Alarm status..." />
+                        <input type="checkbox" ng-model="newAlarm.Status" />
                     </div>
 
                     <button type="submit" class="btn btn-primary">
