--- a/Views/Partials/NewTemperatureModal.html
+++ b/Views/Partials/NewTemperatureModal.html
@@ -20,10 +20,7 @@
                     </div>
                     <div class="form-group">
                         <label for="temperature-status">Temperature status:</label>
-                        <input type="checkbox"
-                               class="form-control"
-                               ng-model="newTemperature.Status"
-                               placeholder="Temperature status..." />
+                        <input type="checkbox" ng-model="newTemperature.Status" />
                     </div>
 
                     <button type="submit" class="btn btn-primary">
