--- a/Views/Sensors/Temperatures.html
+++ b/Views/Sensors/Temperatures.html
@@ -41,7 +41,8 @@
                     <button type="button"
                             class="btn btn-success"
                             data-toggle="modal"
-                            data-target="#editTemperatureModal">
+                            data-target="#editTemperatureModal"
+                            ng-click="getTemperatrue(temperature)">
                         <span class="glyphicon glyphicon-info-sign"></span> Edit
                     </button>
                     <button type="button"
