--- a/Views/Sensors/Alarm.html
+++ b/Views/Sensors/Alarm.html
@@ -35,6 +35,13 @@
                         <span class="glyphicon glyphicon-ok"></span> Change status
                     </button>
                     <button type="button"
+                            class="btn btn-success"
+                            data-toggle="modal"
+                            data-target="#editAlarmModal"
+                            ng-click="getAlarm(alarm)">
+                        <span class="glyphicon glyphicon-info-sign"></span> Edit
+                    </button>
+                    <button type="button"
                             class="btn btn-danger"
                             ng-click="deleteAlarm(alarm)">
                         <span class="glyphicon glyphicon-remove"></span> Delete
@@ -45,3 +52,4 @@
     </div>
 </div>
 <div ng-include="'Views/Partials/NewAlarmModal.html'"></div>
+<div ng-include="'Views/Partials/EditAlarmModal.html'"></div>
