--- a/Views/Sensors/Lights.html
+++ b/Views/Sensors/Lights.html
@@ -35,6 +35,13 @@
                         <span class="glyphicon glyphicon-ok"></span> Change status
                     </button>
                     <button type="button"
+                            class="btn btn-success"
+                            data-toggle="modal"
+                            data-target="#editLightModal"
+                            ng-click="getLight(light)">
+                        <span class="glyphicon glyphicon-edit"></span> Edit
+                    </button>
+                    <button type="button"
                             class="btn btn-danger"
                             ng-click="deleteLight(light)">
                         <span class="glyphicon glyphicon-remove"></span> Delete
@@ -45,3 +52,4 @@
     </div>
 </div>
 <div ng-include="'Views/Partials/NewLightModal.html'"></div>
+<div ng-include="'Views/Partials/EditLightModal.html'"></div>
