--- a/Views/Partials/NewTemperatureModal.html
+++ b/Views/Partials/NewTemperatureModal.html
@@ -23,7 +23,7 @@
                         <input type="checkbox" ng-model="newTemperature.Status" />
                     </div>
 
-                    <button type="submit" class="btn btn-primary" data-dismiss="modal">
+                    <button type="submit" class="btn btn-primary">
                         Add temperature
                     </button>
                 </form>
