--- a/Views/Partials/EditLightModal.html
+++ b/Views/Partials/EditLightModal.html
@@ -19,7 +19,7 @@
                                placeholder="Light name..." />
                     </div>
 
-                    <button type="submit" class="btn btn-primary" data-dismiss="modal">
+                    <button type="submit" class="btn btn-primary">
                         Done
                     </button>
                 </form>
