--- a/Views/Home.html
+++ b/Views/Home.html
@@ -1,32 +1,36 @@
-﻿<div class="col-sm-12">
+﻿<div class="col-md-12" style="text-align:center;">
     <div class="row">
-        <div class="col-sm-5 col-sm-offset-1">
-            <a href="Sensors/Lights">
-                <img class="picture" src="../images/Lights.jpg" style="max-width: 89%;" />
-            </a>
-        </div>
-        <div class="col-sm-5 col-sm-offset-1">
-            <a href="Sensors/Temperatures">
-                <img class="picture" src="../images/temperature.jpg" style="max-width: 89%;" />
-            </a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-sm-12" style="margin-top: 30px;">
-            <div class="row">
-                <div class="col-sm-5 col-sm-offset-1">
-                    <a href="Sensors/Alarm">
-                        <img class="picture" src="../images/alarm.jpg" style="max-width: 89%;" />
-                    </a>
-                </div>
+        <div class="col-md-12">
+            <div class="col-sm-4" style="min-width: 200px;">
+                <h3>Lights</h3>
+                <a href="Sensors/Lights">
+                    <img class="picture" src="../images/Lights.jpg" />
+                </a>
+            </div>
+            <div class="col-sm-4" style="min-width: 200px;">
+                <h3>Temperatures</h3>
+                <a href="Sensors/Temperatures">
+                    <img class="picture" src="../images/temperature.jpg" />
+                </a>
+            </div>
+            <div class="col-sm-4" style="min-width: 200px;">
+                <h3>Alarm</h3>
+                <a href="Sensors/Alarm">
+                    <img class="picture" src="../images/alarm.jpg" />
+                </a>
             </div>
         </div>
     </div>
 </div>
 
+
 <style>
+    .col-sm-4 {
+    }
     .picture {
         opacity: 0.5;
+        width: 275px;
+        max-width: 100%;
     }
     .picture:hover {
         opacity: 1.0;
